правки по всем страницам

--- a/Dispatch-from-China-ORDER-IN-STOCK.html
+++ b/Dispatch-from-China-ORDER-IN-STOCK.html
@@ -25,7 +25,7 @@
         </p>
 
         <!--    Статус: Готов к отправке    -->
-        <div class="mb-40">
+        <div class="mb-30">
             <div class="d-flex justify-between mb-15">
                 <strong>Ваши заказы на складе:</strong>
                 <strong>1<span class="text--muted">/7</span></strong>
@@ -34,7 +34,7 @@
                 <div class="delivery">
                     <label class="checkbox justify-between align-start border-bottom w-100 pb-30">
                         <div class="grow-1">
-                            <div class="mb-5 text-bold">Заказ на доставку №2</div>
+                            <div class="mb-5 text-bold">Заказ на выкуп №2</div>
                             <small class="green-ellipse">Статус: Готов к отправке</small>
                         </div>
                         <input type="checkbox" class="input-hide" checked="">
@@ -94,16 +94,12 @@
         </div>
 
         <!--    Статус: Ожидаем поступления    -->
-        <div class="mb-40">
+        <div class="mb-30">
             <div class="delivery">
                 <label class="checkbox justify-between align-start border-bottom w-100 pb-30">
                     <div class="grow-1">
-                        <div class="mb-5 text-bold">Заказ на доставку №2</div>
+                        <div class="mb-5 text-bold">Заказ на выкуп №2</div>
                         <small class="yellow-ellipse">Статус: Ожидаем поступления</small>
-                    </div>
-                    <input type="checkbox" class="input-hide" checked="">
-                    <div class="checkbox__icon">
-                        <svg width="10" height="7"><use href="#i-check"></use></svg>
                     </div>
                 </label>
 
@@ -157,12 +153,12 @@
         </div>
 
         <!--    Статус: Готов к отправке    -->
-        <div class="mb-40">
+        <div class="mb-30">
             <div class="order-slider__item">
                 <div class="delivery">
                     <label class="checkbox justify-between align-start border-bottom w-100 pb-30">
                         <div class="grow-1">
-                            <div class="mb-5 text-bold">Заказ на доставку №2</div>
+                            <div class="mb-5 text-bold">Заказ на выкуп №2</div>
                             <small class="green-ellipse">Статус: Готов к отправке</small>
                         </div>
                         <input type="checkbox" class="input-hide" checked="">
