--- a/additional-info-on-request.html
+++ b/additional-info-on-request.html
@@ -61,6 +61,12 @@
                 </div>
                 <div class="input-group mb-20">
                     <div class="input-group__item">
+                        <div class="input-text">
+                            <span>Город</span>
+                        </div>
+                        <input type="text" class="input" value="Краснодар">
+                    </div>
+                    <div class="input-group__item">
                         <div class="d-flex justify-between input-text">
                             <span>Край или область</span>
                             <button class="tooltip-btn" type="button">
@@ -68,12 +74,6 @@
                             </button>
                         </div>
                         <input type="text" class="input" value="Краснодарский Край">
-                    </div>
-                    <div class="input-group__item">
-                        <div class="input-text">
-                            <span>Город</span>
-                        </div>
-                        <input type="text" class="input" value="Краснодар">
                     </div>
                 </div>
                 <div class="input-group mb-20">
@@ -149,10 +149,9 @@
                 <p class="text mb-5">Или добавьте скриншот с товаром</p>
                 <div class="d-flex">
                     <input type="text" class="input input--muted grow-1 mr-10" placeholder="Введите ссылку на скриншот">
-                    <label class="add-file add-file--sm">
-                        <input type="file" class="input-hide">
+                    <button type="button" class="add-file add-file--sm">
                         <svg width="20" height="20"><use href="#i-add"></use></svg>
-                    </label>
+                    </button>
                 </div>
             </div>
 
