--- a/stock-orders.html
+++ b/stock-orders.html
@@ -16,7 +16,7 @@
     <div class="pt-30">
         <div class="small-logo">
             <svg width="13" height="15"><use href="#logo-sm"></use></svg>
-            <p class="title">История транзакций</p>
+            <p class="title">заказы на складе</p>
         </div>
         <p class="text mb-30">В этом разделе будут отображены Ваши заказы на
             выкуп с китайскиз сайтов или груз отправленный
