--- a/Dispatch-from-China-ORDER-IN-STOCK-selected.html
+++ b/Dispatch-from-China-ORDER-IN-STOCK-selected.html
@@ -36,7 +36,7 @@
                     <div class="delivery">
                         <label class="checkbox justify-between align-start border-bottom w-100 pb-30">
                             <div class="grow-1">
-                                <div class="mb-5 text-bold">Заказ на доставку №2</div>
+                                <div class="mb-5 text-bold">Заказ на выкуп №2</div>
                                 <small class="green-ellipse">Статус: Готов к отправке</small>
                             </div>
                             <input type="checkbox" class="input-hide" checked="">
@@ -307,7 +307,7 @@
                         <div class="delivery__bottom">
                             <div class="mb-15">
                                 <label class="checkbox">
-                                    <input type="radio" name="delivery-address2" class="input-hide" checked="">
+                                    <input type="radio" name="delivery-address2" class="input-hide" checked="" disabled>
                                     <span class="checkbox__icon mr-10 self-start">
                                     <svg width="10" height="8"><use href="#i-check"></use></svg>
                                 </span>
@@ -316,7 +316,7 @@
                             </div>
                             <div class="mb-15">
                                 <label class="checkbox">
-                                    <input type="radio" name="delivery-address2" class="input-hide">
+                                    <input type="radio" name="delivery-address2" class="input-hide" disabled>
                                     <span class="checkbox__icon mr-10">
                                     <svg width="10" height="8"><use href="#i-check"></use></svg>
                                 </span>
@@ -490,7 +490,7 @@
                 <div class="input-group__item">
                     <div class="relative w-100">
                         <svg class="select-icon" width="10" height="6"><use href="#i-select-arrow"></use></svg>
-                        <select class="input input--select">
+                        <select class="input input--select" disabled>
                             <option value="" selected>Москва</option>
                             <option value="">Баланс</option>
                             <option value="">Баланс</option>
@@ -628,7 +628,7 @@
                 <div class="input-group__item">
                     <div class="relative w-100">
                         <svg class="select-icon" width="10" height="6"><use href="#i-select-arrow"></use></svg>
-                        <select class="input input--select">
+                        <select class="input input--select" disabled>
                             <option value="" selected>Москва</option>
                             <option value="">Баланс</option>
                             <option value="">Баланс</option>
@@ -636,7 +636,7 @@
                     </div>
                 </div>
                 <div class="input-group__item">
-                    <input type="text" class="input input--select" value="Краснодар">
+                    <input type="text" class="input input--select" value="Краснодар" disabled>
                 </div>
             </div>
 
@@ -782,7 +782,7 @@
                 <div class="method method--no-icon">
                     <input class="d-none" type="radio" name="packing_method" id="delivery-russia10">
                     <label class="method__label" for="delivery-russia10">
-                        <span class="method__title">Самовывоз<br> южные ворота</span>
+                        <span class="method__title">Самовывоз<br> Южные ворота</span>
                         <span class="grow-1">0 дн</span>
                         <span class="method__price mr-10">2$</span>
                         <div class="checkbox">
@@ -792,7 +792,7 @@
                         </div>
                     </label>
                 </div>
-                <div class="method__label method__label--messages">
+                <div class="method__label method__label--messages active">
                     <div class="mb-10">Желаемой транспортной компании нет в списке. Я укажу название в комментарии к заказу</div>
                     <input type="text" class="input" placeholder="Название транспортной компании">
                     <div class="d-flex flex-end w-100">
