--- a/leave-reviews.html
+++ b/leave-reviews.html
@@ -18,18 +18,26 @@
             <svg width="13" height="15"><use href="#logo-sm"></use></svg>
             <p class="title">отзывы</p>
         </div>
-        <p class="text mb-10">Напишите отзыв о нашей компании и получите 50₽ на баланс</p>
+
+        <div class="reviews-img">
+            <img src="img/reviews-bg.svg" alt="">
+        </div>
+
+        <p class="text mb-10 text-bold">Напишите отзыв о нашей компании и получите 50₽ на баланс</p>
 
         <form action="" class="reviews-form">
             <div class="mb-10">
                 <textarea name="" class="input input--muted input--textarea" placeholder="Текст отзыва"></textarea>
             </div>
-            <div class="d-flex justify-between">
-                <label class="btn add-file">
-                    <input type="file" class="input-hide">
-                    <svg width="16" height="14"><use href="#i-file"></use></svg>
-                </label>
-                <a href="#" class="color-blue">Предпросмотр</a>
+            <div class="d-flex justify-between align-start">
+                <div class="d-flex f-wrap">
+                    <label class="btn add-file mr-10 mb-10">
+                        <input type="file" class="input-hide">
+                        <svg width="20" height="20"><use href="#i-file"></use></svg>
+                    </label>
+                    <img class="reviews__add-img" src="img/review.png" alt="">
+                </div>
+                <span class="color-blue shrink-0" onclick="document.getElementById('modal-review').classList.add('active')">Предпросмотр</span>
             </div>
 
             <div class="d-flex align-center reviews-form__bottom">
@@ -89,6 +97,41 @@
                 </li>
             </ul>
         </nav>
+    </div>
+</div>
+
+<!-- toggle class    active -->
+<div class="modal modal--review" id="modal-review">
+    <div class="modal__content">
+        <div class="reviews">
+            <div class="reviews__top">
+                <img class="reviews__img" src="img/user.png" alt="">
+                <div>
+                    <strong class="reviews__name">Юлия Архипенко</strong>
+                    <div class="d-flex align-center">
+                        <svg width="20" height="20"><use href="#i-vk-blue"></use></svg>
+                        <span class="ml-5">id00011546565</span>
+                    </div>
+                </div>
+            </div>
+            <p class="text text--muted mb-10">21:53 20.03.2020</p>
+            <div class="reviews__text mb-15">
+                <p class="text">Cras sit amet vulputate massa. Integer enim purus, egestas ut iaculis sed, consectetur ut eros. Sed eu tellus vitae lacus vestibulum scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere</p>
+            </div>
+            <div class="d-flex f-wrap mb-10">
+                <img class="reviews__add-img" src="img/review.png" alt="">
+                <img class="reviews__add-img" src="img/review.png" alt="">
+                <img class="reviews__add-img" src="img/review.png" alt="">
+                <img class="reviews__add-img" src="img/review.png" alt="">
+                <img class="reviews__add-img" src="img/review.png" alt="">
+                <img class="reviews__add-img" src="img/review.png" alt="">
+                <img class="reviews__add-img" src="img/review.png" alt="">
+            </div>
+        </div>
+
+        <button class="modal__close icon-btn" onclick="document.getElementById('modal-review').classList.remove('active')">
+            <svg width="10" height="10"><use href="#i-close"></use></svg>
+        </button>
     </div>
 </div>
 
