--- a/shipping-from-china.html
+++ b/shipping-from-china.html
@@ -36,11 +36,29 @@
         </div>
 
         <div class="shipping-address mb-10">
-            <div class="shipping-address__link"
-                 onclick="this.parentElement.nextElementSibling.classList.toggle('d-none');
-                            this.nextElementSibling.classList.toggle('active')
-                            this.classList.toggle('active')">
+            <div class="shipping-address__link" onclick="this.classList.toggle('active')">
                 <p class="text"><strong>Адрес</strong> нашего склада в Китае, г. Гуанчжоу:</p>
+                <svg width="5" height="9"><use href="#i-arrow"></use></svg>
+            </div>
+            <div class="shipping-address__content">
+                <div class="d-flex align-center pb-20">
+                    <div class="grow-1 mr-10">
+                        广州市越秀区荔德路318号 汇富商 贸中<br>
+                        心A28 栋102仓库 13128641323 ALEXEYH.<br>
+                        箱子上面写 "ID0001/00001”
+                    </div>
+                    <button class="copy-btn shrink-0 copied">
+                        <svg width="18" height="22"><use href="#i-copy"></use></svg>
+                    </button>
+                </div>
+                <div class="shipping-address__bottom">
+                    <p class="mb-0">Скопируйте текст выше и передайте своему поставщику / магазину</p>
+                </div>
+            </div>
+        </div>
+        <div class="shipping-address mb-10">
+            <div class="shipping-address__link" onclick="this.classList.toggle('active')">
+                <p class="text"><strong>Адрес</strong> нашего склада в Китае, г. Иу:</p>
                 <svg width="5" height="9"><use href="#i-arrow"></use></svg>
             </div>
             <div class="shipping-address__content">
@@ -59,32 +77,10 @@
                 </div>
             </div>
         </div>
-        <div class="shipping-address-all d-none">
-            <div class="shipping-address mb-10">
-                <div class="shipping-address__link">
-                    <p class="text"><strong>Адрес</strong> нашего склада в Китае, г. Иу:</p>
-                </div>
-                <div class="shipping-address__content">
-                    <div class="d-flex align-center pb-20">
-                        <div class="grow-1 mr-10">
-                            广州市越秀区荔德路318号 汇富商 贸中<br>
-                            心A28 栋102仓库 13128641323 ALEXEYH.<br>
-                            箱子上面写 "ID0001/00001”
-                        </div>
-                        <button class="copy-btn shrink-0">
-                            <svg width="18" height="22"><use href="#i-copy"></use></svg>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="shipping-address-all__bottom">
-                <p class="mb-0">Скопируйте текст выше и передайте своему поставщику / магазину</p>
-            </div>
-        </div>
 
         <div class="alarm-warning mb-20">
             <div class="alarm-warning__link" onclick="this.classList.toggle('active');this.nextElementSibling.classList.toggle('d-none')">
-                <p class="text"><strong>Внимание!</strong> Обязательно сообщите номер клиента/заказа своему поставщику или магазину перед отправкой груза на наш склад.</p>
+                <p class="text"><strong>Внимание!</strong> Обязательно сообщите номер <span class="text-no-wrap">клиента/заказа</span> своему поставщику или магазину перед отправкой груза на наш склад.</p>
                 <svg class="toggle-icon" width="5" height="9"><use href="#i-arrow"></use></svg>
             </div>
             <div class="alarm-warning__content d-none">
