правки по всем страницам

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
     <li>
         <a href="reviews.html">отзывы</a>
     </li>
+    <li>
+        <a href="story-sending.html">история отправок</a>
+    </li>
 </ul>
 
 </body>
